	  Add a function to initialize the global values.
	  Clean up some unfinished code paths and memory management errors.
	  Make sure we do a deep copy of the path -- the original pointer gets reused
	  or deallocated before we end.
	  Fix improper handling of fread() and fwrite() return values.
	  Fix improper handling of compare function for qsort.
	  Handle the newline read in with fgets().
	  Fix non-ftw directory walk to also check the binary cache.
	* search.c: Implement the check of the cache.
	  Implement the addition of new entries on detection of a binary file.
	* main.c: Call the initialization of the cache and set up for cleanup at termination.
	  Set up loading and saving of the cache file.
	* binary_file_cache.h: Add prototype for cache initialization.
	* settings.h: Add a place in the settings structure to hold the cache file path.
	* settings.c: Give the cache path a default value.

2016-06-03  SilverNexus
	* search.c: Remove unecessary variable in parse_file().
	* load_binary_file_cache.c: Implement writing of cache to file.
	* load_binary_file_cache.c -> binary_file_cache.c
	* binary_file_cache.c: Polish the implementation to match use of header file.
	  Add function to link new detected files into the DIR_LIST for them.
	  Add function to search the cache for a given path.
	* binary_file_cache.h: Make the binary cache function accessible outside the source file.
	  Add declaration for adding newly detected binary files into a linked list.
	  Add declaration for searching for a path in the cache.

2016-06-02  SilverNexus
	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
	* search.c: Increase severity of short read on non-mmap file load to ERROR and bail on that file.
	  Alter detection of next line in single match to use memchr().
	* main.c: Move search string length check up to reduce unnecessary processing when no search
	  string is supplied.